JUnit Tests added + debugging v1 - first sonarcan